--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.16",
     "mongoose": "^7.4.4",
     "next": "13.4.16",
+    "notistack": "^3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^5.3.11",
